added new embeddings

--- a/training.ipynb
+++ b/training.ipynb
@@ -709,13 +709,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Baseline Model Performance"
+    "# Bert Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import DistilBertTokenizer, DistilBertModel\n",
+    "\n",
+    "tokenizer = DistilBertTokenizer.from_pretrained('distilbert-base-cased')\n",
+    "model = DistilBertModel.from_pretrained('distilbert-base-cased')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_embeddings(text:str):\n",
+    "    \"\"\"\n",
+    "    - The function get_embeddings is designed to convert input text into a vector representation, \n",
+    "    or embedding, using a transformer model \n",
+    "    (like BERT or DistilBERT). These embeddings can be used for various \n",
+    "    natural language processing tasks such as text classification, clustering, or similarity searches.\n",
+    "    \n",
+    "    - torch.no_grad(): This context manager tells PyTorch not to compute or store gradients. \n",
+    "    This is important during inference when you only need to do forward propagation, \n",
+    "    as it reduces memory consumption and speeds up computation.\n",
+    "    \n",
+    "    - last_hidden_state: This tensor contains the output features from the last layer of the \n",
+    "    transformer for each token. \n",
+    "    For models like BERT, this typically has dimensions \n",
+    "    [batch_size, sequence_length, hidden_size]\n",
+    "    \n",
+    "    - This line calculates the mean of the last_hidden_state across the sequence length (tokens). \n",
+    "    The mean operation reduces the tensor from [batch_size, sequence_length, hidden_size] \n",
+    "    to [batch_size, hidden_size], resulting in a single vector representation for each \n",
+    "    sequence in the batch. This vector captures the overall semantic meaning of the text.\n",
+    "\n",
+    "    Args:\n",
+    "        text (str): _description_\n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: _description_\n",
+    "    \"\"\"\n",
+    "    inputs = tokenizer(text, return_tensors=\"pt\", padding=True, truncation=True, max_length=512)\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "    \n",
+    "    last_hidden_states = outputs.last_hidden_state\n",
+    "    \n",
+    "    mean_embeddings = last_hidden_states.mean(dim=1)\n",
+    "    return mean_embeddings.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['text_embeddings'] = df['text'].apply(lambda x: get_embeddings(x))\n",
+    "\n",
+    "features = np.array(df['text_embeddings'].tolist()).reshape(df.shape[0], -1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Baseline Model Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "model = DummyClassifier(strategy='uniform',) \n",
+    "\n",
+    "scores = evaluate_model(tfidf_fit, y, model)\n",
+    "print('Mean: %.3f (%.3f)' % (np.mean(scores), np.std(scores)))"
+   ]
   }
  ],
  "metadata": {
