added new models

--- a/training.ipynb
+++ b/training.ipynb
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,17 +788,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean: 0.666 (0.000)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.dummy import DummyClassifier\n",
     "\n",
-    "model = DummyClassifier(strategy='uniform',) \n",
+    "model = DummyClassifier(strategy='constant', constant=1) \n",
     "\n",
-    "scores = evaluate_model(tfidf_fit, y, model)\n",
+    "scores = evaluate_model(features, y, model)\n",
     "print('Mean: %.3f (%.3f)' % (np.mean(scores), np.std(scores)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
