added new models

--- a/training.ipynb
+++ b/training.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,56 @@
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    print(f'Test accuracy: {accuracy:.3f}')\n",
     "    \n",
-    "    return grid_search"
+    "    return grid_search\n",
+    "def grid_search_selected_models(param_grid:dict,names:list, models:list, X:pd.DataFrame, y:pd.Series, metric):\n",
+    "    \"\"\"\n",
+    "    Runs multiple subsets on folds of data\n",
+    "\n",
+    "    Args:\n",
+    "        names (list): _description_\n",
+    "        models (list): _description_\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42)\n",
+    "\n",
+    "    model_performance = []\n",
+    "\n",
+    "    for i in range(len(models)):\n",
+    "        model, name = models[i], names[i]\n",
+    "            \n",
+    "        grid_search = GridSearchCV(model, param_grid[name], cv=5, scoring=metric, n_jobs=-1)\n",
+    "        grid_search.fit(X_train, y_train)\n",
+    "        best_model = grid_search.best_estimator_\n",
+    "            \n",
+    "        # Predict on the test set\n",
+    "        y_pred = best_model.predict(X_test)\n",
+    "        accuracy = accuracy_score(y_test, y_pred)\n",
+    "            \n",
+    "        print(f'Best score for {name}: {grid_search.best_score_:.3f}')\n",
+    "        print(\"Best parameters:\", grid_search.best_params_)\n",
+    "        \n",
+    "        print(f'Test accuracy for {name}: {accuracy:.3f}')\n",
+    "        print(\"---------------------------------------------------------------\")\n",
+    "        \n",
+    "        conf_mat = confusion_matrix(y_test, y_pred)\n",
+    "        # Plot the confusion matrix\n",
+    "        plt.figure(figsize=(8,6))\n",
+    "        sns.heatmap(conf_mat, annot=True, fmt='d', cmap='Blues')\n",
+    "        plt.xlabel('Predicted Labels')\n",
+    "        plt.ylabel('True Labels')\n",
+    "        plt.title(f'Confusion Matrix for {names[i]}')\n",
+    "        plt.show()\n",
+    "            \n",
+    "        model_performance.append({\n",
+    "                \"Model\": name,\n",
+    "                \"Best CV Score\": grid_search.best_score_,\n",
+    "                \"Test Accuracy\": accuracy,\n",
+    "                \"Best Parameters\": grid_search.best_params_\n",
+    "        })\n",
+    "\n",
+    "\n",
+    "    model_performance_df = pd.DataFrame(model_performance)\n",
+    "    print(model_performance_df)"
    ]
   },
   {
@@ -1737,6 +1786,30 @@
    ],
    "source": [
     "svm_tune_grid_search(features, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"RFC\"]\n",
+    "models = get_selected_models(names)\n",
+    "\n",
+    "param_grid = {\n",
+    "    'RFC': {\n",
+    "        \"criterion\":['gini', 'entropy', 'log_loss'],\n",
+    "        'n_estimators': [100, 200, 300],\n",
+    "        'max_depth': [None, 10, 20, 30],\n",
+    "        'min_samples_split': [2, 5, 10],\n",
+    "        'min_samples_leaf': [1, 2, 4],\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "metric = make_scorer(accuracy_score)\n",
+    "\n",
+    "grid_search_selected_models(param_grid, names, models, features, y, metric)"
    ]
   },
   {
