--- a/training.ipynb
+++ b/training.ipynb
@@ -1817,7 +1817,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "names = [\"GBC\"]\n",
+    "models = get_selected_models(names)\n",
+    "\n",
+    "param_grid = {\n",
+    "    'GBC': {\n",
+    "        \"loss\":['log_loss', 'deviance', 'exponential'],\n",
+    "        'n_estimators': [100, 200, 300],\n",
+    "        'learning_rate': [0.01, 0.1, 0.2],\n",
+    "        'max_depth': [3, 5, 7]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "metric = make_scorer(accuracy_score)\n",
+    "\n",
+    "grid_search_selected_models(param_grid, names, models, X, y, metric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = [\"XGB\"]\n",
+    "models = get_selected_models(names)\n",
+    "\n",
+    "param_grid = {\n",
+    "    'XGB': {\n",
+    "        'n_estimators': [100, 200, 300],\n",
+    "        'max_depth': [3, 5, 7],\n",
+    "        'learning_rate': [0.01, 0.1, 0.2]\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "metric = make_scorer(accuracy_score)\n",
+    "\n",
+    "grid_search_selected_models(param_grid, names, models, X, y, metric)"
+   ]
   }
  ],
  "metadata": {
